# ATLAS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  atlasmetaprompt.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-app.yml  ci.yml  cla.yml  version.yml
atlas/: ARCHITECTURE.md  CHANGELOG.md  VERSION.json  __init__.py  run.sh  settings.py
atlas/config/: settings.example.json  settings.json
atlas/connectors/: __init__.py  contract_template.md  loader.py  registry.json  web_search.py
atlas/core/: identity.md
atlas/engine/: lessons.md  updater.py
atlas/evaluation/: __init__.py  logger.py
atlas/interface/: interface_plan.md
atlas/logs/: schema.md
atlas/memory/: __init__.py  consolidation.md  reindex.py  schema.sql  store.py  vector_store.config.json
atlas/orchestration/: __init__.py  config.json  router.py  tools.py
atlas/scheduler/: README.md  __init__.py  __main__.py  jobs.py  scheduler.py
atlas/server/: __init__.py  __main__.py  app.py
atlas/snapshots/: .gitkeep
atlas/tests/: golden_conversations.md  identity_canaries.json  identity_canaries.md  test_aec.py  test_audio_service.py  test_connectors.py  test_memory.py  test_scheduler.py  (+3 more)
deploy/: NATIVE_APP.md  atlas-core.spec  atlas_core_entry.py  build-app.sh  com.atlas.assistant.plist  install-service.sh  uninstall-service.sh
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: check_overflow.py
(+15 files in other folders)
