[project]
name = "atlas-assistant"
version = "0.1.0"
description = "ATLAS — Automated Task & Logic Assistant System (voice-first personal assistant)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["atlas/tests"]
pythonpath = ["."]
